# sharo

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  audit.toml  deny.toml  justfile
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: merge-result-gate.yml  nightly-fuzz.yml  openai-live-smoke.yml  policy-checks.yml  rust-hygiene.yml
crates/sharo-cli/: Cargo.toml
crates/sharo-cli/src/: main.rs
crates/sharo-cli/tests/: approval_cli.rs  cli_smoke.rs  cli_surface_tests.rs  coordination_cli.rs  scenario_a_cli.rs
crates/sharo-core/: Cargo.toml
crates/sharo-core/fuzz/: Cargo.toml
crates/sharo-core/fuzz/fuzz_targets/: daemon_request_session_views.rs
crates/sharo-core/src/: client.rs  context_resolvers.rs  coordination.rs  kernel.rs  lib.rs  mcp.rs  model_connector.rs  model_connectors.rs  policy.rs  protocol.rs  reasoning.rs  reasoning_context.rs  runtime_types.rs  skills.rs
crates/sharo-core/tests/: context_resolver_tests.rs  coordination_tests.rs  ipc_protocol_tests.rs  policy_tests.rs  protocol_surface_tests.rs  protocol_tests.rs  reasoning_connector_tests.rs  reasoning_context_tests.rs  runtime_types_tests.rs  skills_tests.rs  stub_client_tests.rs
crates/sharo-daemon/: Cargo.toml
crates/sharo-daemon/src/: config.rs  connector_pool.rs  control_plane.rs  hazel_control_plane.rs  kernel.rs  main.rs  mcp_registry.rs  skills.rs  store.rs
crates/sharo-daemon/tests/: approval_flow.rs  coordination_store.rs  daemon_ipc.rs  daemon_smoke.rs  idempotency_and_control.rs  loom_submit_shutdown.rs  recovery_invariants.rs  scenario_a.rs  scenario_c_overlap.rs
crates/sharo-hazel-core/: Cargo.toml
crates/sharo-hazel-mcp/: Cargo.toml
crates/sharo-hazel-mcp/fuzz/: Cargo.toml
crates/sharo-hazel-mcp/fuzz/corpus/wire_request_frame/: invalid-json.txt  valid-recollect.jsonl
crates/sharo-hazel-mcp/fuzz/fuzz_targets/: wire_request_frame.rs
crates/sharo-hazel-mcp/src/: lib.rs  main.rs  normalize.rs  schema.rs  wire.rs
crates/sharo-hazel-mcp/tests/: schema_contracts.rs
crates/sharo-tui/: Cargo.toml
crates/sharo-tui/fuzz/: Cargo.toml
crates/sharo-tui/fuzz/fuzz_targets/: slash_command_parser.rs
crates/sharo-tui/src/: app.rs  commands.rs  layout.rs  lib.rs  main.rs  state.rs  tui_loop.rs
crates/sharo-tui/src/screens/: approvals.rs  artifacts.rs  chat.rs  mod.rs  sessions.rs  settings.rs
crates/sharo-tui/tests/: chat_flow.rs  hazel_screen.rs  interaction_loop.rs  keybindings.rs  layout_render.rs  settings_and_artifacts.rs  slash_commands.rs  support.rs  tui_smoke.rs
docs/: aliases.toml  docker-runtime-image.md
docs/devops/: docker-runtime-operations.md
docs/plans/: 2026-03-04-alias-resolution-design.md  2026-03-04-alias-resolution-implementation-plan.md  2026-03-04-design-note-alignment-plan.md  2026-03-04-doc-lint-gate-implementation-plan.md  2026-03-04-research-note-alignment-plan.md  2026-03-04-rust-workspace-bootstrap-plan.md  2026-03-04-vault-sync-protocol-plan.md  2026-03-05-agent-kernel-reasoning-design-plan.md  2026-03-05-agent-kernel-reasoning-implementation-plan.md  2026-03-05-connector-blocking-pool-scaling-plan.md  2026-03-05-ipc-transport-plan.md  2026-03-05-mvp-roadmap.md  2026-03-05-mvp-slice-000-roadmap-tracking-plan.md  2026-03-05-mvp-slice-001-scenario-a-plan.md  2026-03-05-mvp-slice-002-scenario-b-plan.md  2026-03-05-mvp-slice-003-scenario-c-plan.md  2026-03-05-mvp-slice-004-protocol-cli-plan.md  2026-03-05-mvp-slice-005-verification-hardening-plan.md  2026-03-05-mvp-verification-matrix-map.md  2026-03-05-openai-live-smoke-plan.md  2026-03-05-reasoning-context-fixed-point-loop-plan.md  2026-03-05-restart-trace-continuity-hardening-plan.md  2026-03-05-task-result-preview-plan.md  2026-03-06-authenticated-provider-base-url-hardening-plan.md  2026-03-06-connector-pool-thread-bound-hardening-plan.md  2026-03-06-daemon-blocking-submit-offload-plan.md  2026-03-06-daemon-concurrent-ipc-serving-plan.md  2026-03-06-daemon-submit-parallelism-plan.md  2026-03-06-deterministic-workflow-hardening-plan.md  2026-03-06-prompt-guidance-template-hardening-plan.md  2026-03-06-provider-error-classification-plan.md  2026-03-06-rust-lint-hygiene-plan.md  2026-03-06-store-directory-fsync-commit-consistency-plan.md  2026-03-06-store-directory-fsync-durability-plan.md  2026-03-06-store-transactional-persistence-plan.md  2026-03-06-submit-identity-reservation-plan.md  2026-03-06-workflow-tool-guides-plan.md  2026-03-06-workflow-tooling-rollout-plan.md  2026-03-10-hazel-structured-memory-plan.md  2026-03-11-chat-first-tui-design.md  (+9 more)
docs/specs/: authenticated-provider-base-url-hardening.md  conflict-resolution-policy.md  connector-blocking-execution.md  connector-pool-thread-bound-hardening.md  daemon-blocking-submit-offload.md  daemon-concurrent-ipc-serving.md  daemon-submit-parallelism.md  deterministic-workflow-hardening.md  docker-runtime-image.md  hazel-inspection-tooling.md  hazel-structured-memory.md  ipc-transport.md  local-policy-replay-hardening.md  mvp.md  prompt-guidance-template-hardening.md  provider-error-classification.md  rust-lint-hygiene.md  rust-workspace-bootstrap.md  store-directory-fsync-commit-consistency.md  (+8 more)
scripts/: alias-resolve.sh  bootstrap-dev.sh  check-changelog-staged.sh  check-ci-smoke.sh  check-conflict-determinism.sh  check-conventional-commit.sh  check-daemon-invariants.sh  check-dependencies-security.sh  check-doc-portability.sh  check-doc-terms.sh  check-durability-signals.sh  check-fast-feedback-marker.sh  check-fast-feedback.sh  check-flaky-regressions.sh  check-fuzz.sh  check-knot-diff.sh  check-merge-compat.sh  check-merge-result.sh  check-mvp-matrix-map.sh  check-prepush-policy.sh  check-research-references.sh  check-rust-hygiene.sh  check-rust-policy.sh  check-rust-tests.sh  check-shell-quality.sh  check-sync-manifest.sh  check-tasks-registry.sh  check-tasks-sync.sh  check-tests.sh  check-workflows.sh  doc-lint.sh  doc-new.sh  doc-start.sh  docker-build.sh  docker-smoke.sh  extract-backbone.sh  init-from-backbone.sh  init-repo.sh  install-bats.sh  install-hooks.sh  (+5 more)
(+58 files in other folders)
