[package]
name = "sharo-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "sharo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sharo-core = { path = "../sharo-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
