[package]
name = "sharo-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[[bin]]
name = "sharo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1.0.149"
sharo-core = { path = "../sharo-core", version = "0.1.0" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net", "io-util"] }
