[package]
name = "sharo-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"

[dev-dependencies]
proptest = "1"
serde_json = "1"
