[package]
name = "sharo-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
url = "2.5.8"

[dev-dependencies]
proptest = "1.10.0"
serde_json = "1.0.149"
