[package]
name = "sharo-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[[bin]]
name = "sharo-daemon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sharo-core = { path = "../sharo-core", version = "0.1.0" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "net", "io-util"] }
toml = "0.8.23"
crossbeam-channel = "0.5.15"
sha2 = "0.10.9"
url = "2.5.8"

[dev-dependencies]
loom = "0.7.2"
proptest = "1.10.0"
serde_json = "1.0.149"
sharo-core = { path = "../sharo-core", version = "0.1.0" }
