[package]
name = "sharo-hazel-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[[bin]]
name = "sharo-hazel-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sharo-core = { path = "../sharo-core", version = "0.1.0" }
sharo-hazel-core = { path = "../sharo-hazel-core", version = "0.1.0" }
