[package]
name = "sharo-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
sharo-core = { path = "..", version = "0.1.0" }

[[bin]]
name = "daemon_request_session_views"
path = "fuzz_targets/daemon_request_session_views.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
