[package]
name = "sharo-hazel-mcp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
sharo-core = { path = "../../sharo-core" }
sharo-hazel-mcp = { path = ".." }

[[bin]]
name = "wire_request_frame"
path = "fuzz_targets/wire_request_frame.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
