[package]
name = "sharo-hazel-mcp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
sharo-core = { path = "../../sharo-core", version = "0.1.0" }
sharo-hazel-mcp = { path = "..", version = "0.1.0" }

[[bin]]
name = "wire_request_frame"
path = "fuzz_targets/wire_request_frame.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
